--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "git"
   ],
   "author": "prince",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
